multicluster/pkg/test/expose-binding/ratings-exposure.yaml
# Expose the "ratings" service
apiVersion: multicluster.istio.io/v1alpha1
kind: ServiceExpositionPolicy
metadata:
  name: ratings
spec:
  exposed:
  - name: ratings
    clusters:
    - acceptor-cluster
