multicluster/pkg/test/expose-binding/reviews-binding.yaml
# Consume reviews, any version, from cluster2
apiVersion: multicluster.istio.io/v1alpha1
kind: RemoteServiceBinding
metadata:
  name: reviews
spec:
  remote:
  - cluster: cluster2
    services:
    - name: reviews
      port: 9080
