multicluster/pkg/test/expose-binding/reviews-exposure-both.yaml
# Expose the "reviews" service
apiVersion: multicluster.istio.io/v1alpha1
kind: ServiceExpositionPolicy
metadata:
  name: reviews
spec:
  exposed:
  - name: reviews
    port: 9080
---
# Expose the "reviews" service, subset v1 only, only to cluster1, with alternate name
apiVersion: multicluster.istio.io/v1alpha1
kind: ServiceExpositionPolicy
metadata:
  name: reviews-v1
spec:
  exposed:
  - name: reviews
    port: 9080
    alias: reviews-v1
    subset: v1
    clusters:
    - cluster1
