multicluster/pkg/test/expose-binding/reviews-exposure-cluster1.yaml
# Expose the "reviews" service
apiVersion: multicluster.istio.io/v1alpha1
kind: ServiceExpositionPolicy
metadata:
  name: reviews
spec:
  exposed:
  - name: reviews
    port: 9080
    clusters:
    - cluster-1
