multicluster/pkg/test/expose-binding/reviews-exposure-starter.yaml
# Holds a DestinationRule with a defined subset for testing merging generated DR with existing DR
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dest-rule-name
  namespace: default
spec:
  host: reviews.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
